--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
  {
    "db" : "mandubusinessprop",
    "user" : "businesspropadmin",
-    "password" :"123456",
+    "password" :"mandu2018!",
     "host" : "localhost",
     "port" : 5432
  }
